# wumpus

./: .gitignore  CLAUDE.md  MAKEFILE_GUIDE.md  MINI_PROJECT_OBJECTIVES.md  Makefile  OBJECTIVES_REVIEW.md  README.md  README.txt  RUN_AND_TESTS.md  RUN_AND_TESTS.txt  emdw_RandomEngine_seedVal.txt  out_d1_marginal.txt  out_d2_map.txt  out_d3_map.txt  out_d3_marginal.txt  out_d5_map.txt  visualize.py
emdw_de424/devel/emdw/: CMakeLists.txt  README.md
emdw_de424/devel/emdw/cmake/Modules/: FindgLinear.cmake  Findprlite.cmake
emdw_de424/devel/emdw/docs/: Python_tutorial.ipynb  bayesianmean_BN-psfrag.tex  bayesianmean_BN.dot  bayesianmean_BN.eps  bayesianmean_CG-psfrag.tex  bayesianmean_CG.dot  bayesianmean_CG.eps  condpolya.ipynb  condpolya_bn-psfrag.tex  condpolya_bn.dot  condpolya_bn.eps  condpolya_cg-psfrag.tex  condpolya_cg.dot  condpolya_cg.eps  devguide.tex  gaussian.tex  gaussianprior.tex  hamming74a_bn-psfrag.tex  hamming74a_bn.dot  hamming74a_bn.eps  hamming74b_bn-psfrag.tex  hamming74b_bn.dot  hamming74b_bn.eps  hamming74b_cg-psfrag.tex  hamming74b_cg.dot  hamming74b_cg.eps  lda_bn-psfrag.tex  lda_bn.dot  lda_bn.eps  lda_cg-psfrag.tex  lda_cg.dot  lda_cg.eps  lineargaussian.tex  msgpassing-psfrag.tex  msgpassing.dot  msgpassing.eps  optpol.ipynb  pgm.bib  polya.ipynb  polyabasic1_cg-psfrag.tex  (+21 more)
emdw_de424/devel/emdw/extras/: examplefactor.cc  examplefactor.hpp  examplefactor.test.cc  my_emdw_app.tgz  templatedexamplefactor.hpp  templatedexamplefactor.tcc  templatedexamplefactor.test.cc
emdw_de424/devel/emdw/src/: CMakeLists.txt  CMakeLists.txt~
emdw_de424/devel/emdw/src/emdw-base/: CMakeLists.txt  emdw.cc  emdw.hpp  emdw.tcc
emdw_de424/devel/emdw/src/emdw-beliefprop/: CMakeLists.txt  lbp_cg.cc  lbp_cg.hpp  lbu2_cg.cc  lbu2_cg.hpp  lbu_cg.cc  lbu_cg.hpp  lbu_sweep.cc  lbu_sweep.hpp  messagequeue.cc  messagequeue.hpp
emdw_de424/devel/emdw/src/emdw-clustering/: CMakeLists.txt  mojo.cc  mojo.hpp
emdw_de424/devel/emdw/src/emdw-factors/: CMakeLists.txt  affinemvg.cc  affinemvg.hpp  categorical.hpp  conditionaldirichlet.hpp  conditionalpolya.hpp  conditionalpolya.tcc  dirichlet.hpp  dirichlet.tcc  dirichletset.hpp  dirichletset.tcc  discretetable.hpp  discretetable.tcc  factor.cc  factor.hpp  factor.tcc  factoroperator.cc  factoroperator.hpp  factoroperator.tcc  mvg.hpp  polya.hpp  polya.tcc  sqrtmvg.cc  sqrtmvg.hpp  treefactor.cc  treefactor.hpp
emdw_de424/devel/emdw/src/emdw-graphing/: CMakeLists.txt  bronkerbosch.cc  bronkerbosch.hpp  clustergraph.cc  clustergraph.hpp
emdw_de424/devel/emdw/src/test/: CMakeLists.txt  affinemvg.test.cc  bronkerbosch.test.cc  conditionalpolya.test.cc  dirichlet.test.cc  dirichletset.test.cc  discretetable.test.cc  polya.test.cc  sigmapoints.test.cc  sqrtmvg.test.cc
emdw_de424/devel/emdw/src/utils-dependancyglue/: CMakeLists.txt
emdw_de424/devel/emdw/src/utils-informationtheory/: CMakeLists.txt  inftheory.cc  inftheory.hpp  inftheory.tcc
emdw_de424/devel/emdw/src/utils-matrix/: CMakeLists.txt  lapackblas.hpp  matflips.hpp  mathfuncs.cc  mathfuncs.hpp  matops.cc  matops.hpp  matops.tcc  v2vtransform.cc  v2vtransform.hpp
emdw_de424/devel/emdw/src/utils-misc/: CMakeLists.txt  anytype.hpp  colourmap.cc  colourmap.hpp  combinations.cc  combinations.hpp  combinations.tcc  dtw.hpp  hashfunctions.hpp  nestedloop.hpp  oddsandsods.cc  oddsandsods.hpp
emdw_de424/devel/emdw/src/utils-sigmapoints/: CMakeLists.txt  sigmapoints.cc  sigmapoints.hpp
emdw_de424/devel/emdw/src/utils-vector/: CMakeLists.txt  sortindices.hpp  sortindices.tcc  vecset.hpp  vecset.tcc
emdw_de424/devel/emdw/src/vmp/: CMakeLists.txt  cat1expf.hpp
emdw_de424/devel/emdw/src/wip/: CMakeLists.txt  CMakeLists.txt~  emdwlda.cc  inplace_lbu.cc  lbu_push_cg.cc  prior4gauss.cc  showedges.m  simlda.cc  textblockio.hpp  textblockio.tcc  trivial.cc
emdw_de424/devel/gLinear/: AddFramework.cmake  CMakeLists.txt  CMakeLists.txt~  ChangeLog  Makefile  Matrix.h  README.md  SConscript  SConstruct  Vector.h  arch-config  docroot.dxx  exceptions.h  gColVector.h  gColVector.tcc  gCppTraits.h  gError.cc  gError.h  gFortranTraits.h  gFortranTraits.tcc  gIndexRange.cc  gIndexRange.h  gLapackHeaders.h  gLapackWrap.cc  gLapackWrap.h  gLapackWrap.tcc  gLinear.h  gLinearAlgo.h  gLinearAlgo.tcc  gLinearAlloc.cc  gLinearAlloc.h  gLinearFunctors.h  gLinearFunctors.tcc  gLinearMacros.cc  gLinearMacros.h  gLinearMem.h  gLinearMem.tcc  gMatrix.h  gMatrix.tcc  gMatrixBase.h  (+31 more)
emdw_de424/devel/gLinear/cmake/: configure
emdw_de424/devel/gLinear/cmake/Modules/: FindArabica.cmake  FindHTS.cmake  FindIbisEngine.cmake  FindPatrecII.cmake  FindPortAudio.cmake  FindSPTK.cmake  FindXercesC.cmake  Logging.cmake  MakeVoiceList.cmake  TargetPlatform.cmake  tools-unix.cmake
emdw_de424/devel/gLinear/cmake/Modules/Platform/: Android-gcc.cmake  Android.cmake  (+2 more)
emdw_de424/devel/gLinear/doc/: CMakeLists.txt  Makefile  classes.eps  classes.ps  coding_convention.tex  programmer.tex
emdw_de424/devel/gLinear/gLinear.xcodeproj/: project.pbxproj
emdw_de424/devel/gLinear/gLinear.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
emdw_de424/devel/gLinear/win_build/: gLinear.sln  gLinear.vcproj  gLinear8.sln  gLinear8.vcproj  testnew.vcproj  testnew8.vcproj
emdw_de424/devel/prlite/: CMakeLists.txt  README.md
emdw_de424/devel/prlite/src/: CMakeLists.txt  CMakeLists.txt~  prlite_alloc.cc  prlite_alloc.hpp  prlite_colourmap.cc  prlite_colourmap.hpp  prlite_endian.cc  prlite_endian.hpp  prlite_endian.tcc  prlite_error.hpp  prlite_fnamepar.cc  prlite_fnamepar.hpp  prlite_gendefs.hpp  prlite_genmat.cc  prlite_genmat.hpp  prlite_genmat.tcc  prlite_genvec.hpp  prlite_genvec.tcc  prlite_logging.cc  prlite_logging.hpp  prlite_matflips.hpp  prlite_matflips.tcc  prlite_matrix.cc  prlite_matrix.hpp  prlite_matrix.tcc  prlite_mrandom.cc  prlite_mrandom.hpp  prlite_my_any.cc  prlite_my_any.hpp  prlite_outerquad_l2u.hpp  prlite_outerquad_l2u.tcc  prlite_rcptr.hpp  prlite_rcptr.tcc  prlite_shuffles.cc  prlite_shuffles.hpp  prlite_sorting.hpp  prlite_sorting.tcc  prlite_stdfun.cc  prlite_stdfun.hpp  prlite_stdfun.tcc  (+15 more)
(+284 files in other folders)
